# starlark-extensions-repro

./: .bazelignore  .bazeliskrc  .gitignore  BUILD.bazel  MODULE.bazel  README.bazel.md  README.md  package.json  pnpm-lock.yaml
.aspect/cli/: postcss.star
bazel/: defs.bzl
pkgs/foo-lib/: BUILD.bazel  package.json  postcss.config.mjs
pkgs/foo-lib/src/: Foo.module.css  Foo.tsx
pkgs/postcss-config/: BUILD.bazel  package.json  tsconfig.json
pkgs/postcss-config/src/: index.ts
